// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderCard > 스냅샷: merged 1`] = `
"fallback: ✅ [dev-infra] dnhynk/dev-infra #7 · 카드 layout을 코드로 고정 — 병합 완료 — https://github.com/dnhynk/dev-infra/pull/7
---
✅ *[dev-infra] dnhynk/dev-infra #7* · 카드 layout을 코드로 고정
---
*무엇이 바뀌나*
PR 사실을 Slack 카드로 옮기는 렌더러를 추가했다.
---
*왜 필요한가*
모델이 layout이나 링크를 만들지 않게 하기 위해서다.
---
*현재*
병합 완료
---
*리뷰*
reviewer_result가 관찰되지 않았다
---
*CI*
• typecheck: SUCCESS
---
*worker 보고*
worker 보고 없음
---
[PR 보기](https://github.com/dnhynk/dev-infra/pull/7)"
`;

exports[`renderCard > 스냅샷: review approve · head가 움직임 1`] = `
"fallback: 🟢 [dev-infra] dnhynk/dev-infra #7 · 카드 layout을 코드로 고정 — 리뷰 통과 — https://github.com/dnhynk/dev-infra/pull/7
---
🟢 *[dev-infra] dnhynk/dev-infra #7* · 카드 layout을 코드로 고정
---
*무엇이 바뀌나*
PR 사실을 Slack 카드로 옮기는 렌더러를 추가했다.
---
*왜 필요한가*
모델이 layout이나 링크를 만들지 않게 하기 위해서다.
---
*현재*
리뷰 통과
---
*리뷰*
판정: approve
reviewer가 본 commit이 현재 head와 다르다
보고된 finding 없음
---
*위험도*
낮음 (reviewer findings severity 기준)
---
*CI*
• typecheck: SUCCESS
---
*worker 보고*
결과: succeeded
---
[PR 보기](https://github.com/dnhynk/dev-infra/pull/7)"
`;

exports[`renderCard > 스냅샷: review request_changes 1`] = `
"fallback: ⚠️ [dev-infra] dnhynk/dev-infra #7 · 카드 layout을 코드로 고정 — 리뷰에서 수정 요청 — https://github.com/dnhynk/dev-infra/pull/7
---
⚠️ *[dev-infra] dnhynk/dev-infra #7* · 카드 layout을 코드로 고정
---
*무엇이 바뀌나*
PR 사실을 Slack 카드로 옮기는 렌더러를 추가했다.
---
*왜 필요한가*
모델이 layout이나 링크를 만들지 않게 하기 위해서다.
---
*현재*
리뷰에서 수정 요청
---
*리뷰*
판정: request_changes
• [blocker] src/digest/render.ts:88 — esc()를 거치지 않은 경로가 있다
• [minor] src/slack/post.ts — 주석 오타
외 10건은 카드에 싣지 않았다
---
*리뷰 핵심*
이스케이프 누락 경로를 하나 더 막아야 한다.
---
*위험도*
높음 (reviewer findings severity 기준)
---
*CI*
• typecheck: SUCCESS
• test: IN_PROGRESS
---
*worker 보고*
결과: succeeded
---
[PR 보기](https://github.com/dnhynk/dev-infra/pull/7)"
`;

exports[`renderCard > 스냅샷: 요약 성공 · review 없음 1`] = `
"fallback: 🟡 [dev-infra] dnhynk/dev-infra #7 · 카드 layout을 코드로 고정 — 리뷰 결과 없음 — https://github.com/dnhynk/dev-infra/pull/7
---
🟡 *[dev-infra] dnhynk/dev-infra #7* · 카드 layout을 코드로 고정
---
*무엇이 바뀌나*
PR 사실을 Slack 카드로 옮기는 렌더러를 추가했다.
---
*왜 필요한가*
모델이 layout이나 링크를 만들지 않게 하기 위해서다.
---
*현재*
리뷰 결과 없음
---
*리뷰*
reviewer_result가 관찰되지 않았다
---
*CI*
• typecheck: SUCCESS
---
*worker 보고*
결과: succeeded
---
[PR 보기](https://github.com/dnhynk/dev-infra/pull/7)"
`;

exports[`renderCard > 스냅샷: 요약 실패 1`] = `
"fallback: 🟡 [dev-infra] dnhynk/dev-infra #7 · feat(c1): deterministic renderer — 리뷰 결과 없음 — https://github.com/dnhynk/dev-infra/pull/7
---
🟡 *[dev-infra] dnhynk/dev-infra #7* · feat(c1): deterministic renderer
---
*요약 실패*
이 카드는 요약 없이 관찰된 사실만 담는다. 제목은 PR 원문 제목이다.
사유: HTTP 429 | why에 링크가 있다. 모델은 링크를 만들지 않는다
---
*현재*
리뷰 결과 없음
---
*리뷰*
reviewer_result가 관찰되지 않았다
---
*CI*
• typecheck: SUCCESS
---
*worker 보고*
결과: succeeded
renderer를 구현했다. layout이 코드에만 있음을 확인했다. 게시는 T5가 남았다.
---
[PR 보기](https://github.com/dnhynk/dev-infra/pull/7)"
`;
